old/tupi-arch/iptables.rules
# Generated by iptables-save v1.4.7 on Wed Jun  2 18:32:30 2010
*raw
:PREROUTING ACCEPT [34376:33391978]
:OUTPUT ACCEPT [20612:2366888]
COMMIT
# Completed on Wed Jun  2 18:32:30 2010
# Generated by iptables-save v1.4.7 on Wed Jun  2 18:32:30 2010
*nat
:PREROUTING ACCEPT [189:26191]
:POSTROUTING ACCEPT [201:13626]
:OUTPUT ACCEPT [201:13626]
COMMIT
# Completed on Wed Jun  2 18:32:30 2010
# Generated by iptables-save v1.4.7 on Wed Jun  2 18:32:30 2010
*mangle
:PREROUTING ACCEPT [34376:33391978]
:INPUT ACCEPT [34376:33391978]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [20612:2366888]
:POSTROUTING ACCEPT [20612:2366888]
COMMIT
# Completed on Wed Jun  2 18:32:30 2010
# Generated by iptables-save v1.4.7 on Wed Jun  2 18:32:30 2010
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 8080 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 8443 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 20:21 -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 8767 -j ACCEPT 
-A INPUT -p udp -m udp --dport 8767 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 8768 -j ACCEPT 
-A INPUT -p udp -m udp --dport 8768 -j ACCEPT 
-A INPUT -p udp -m udp --dport 9987 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 30033 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 10011 -j ACCEPT 
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A OUTPUT -o lo -j ACCEPT 
-A OUTPUT -p icmp -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 22 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 53 -j ACCEPT 
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT 
-A OUTPUT -p udp -m udp --dport 123 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 80 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 8080 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 443 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 20:21 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 8767 -j ACCEPT 
-A OUTPUT -p udp -m udp --dport 8767 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 8768 -j ACCEPT 
-A OUTPUT -p udp -m udp --dport 8768 -j ACCEPT 
-A OUTPUT -p udp -m udp --dport 9987 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 30033 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 10011 -j ACCEPT 
COMMIT
# Completed on Wed Jun  2 18:32:30 2010
